src-tauri/logs_v7.txt
    Checking tauri-apphowlingual v0.1.0 (C:\Users\Flow\Antigravity\Howlingual\src-tauri)
error[E0502]: cannot borrow `*self` as immutable because it is also borrowed as mutable
   --> src\ocr_engine.rs:159:21
    |
153 |         let outputs = self.det_session.run(ort::inputs!["x" => input_value])?;
    |                       ---------------- mutable borrow occurs here
...
159 |         let boxes = self.find_contours(data, out_w, out_h, 0.3);
    |                     ^^^^ immutable borrow occurs here
...
162 |     }
    |     - mutable borrow might be used here, when `outputs` is dropped and runs the destructor for type `SessionOutputs<'_>`

warning: value assigned to `resize_w` is never read
   --> src\ocr_engine.rs:130:28
    |
130 |         let mut resize_w = w;
    |                            ^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `resize_h` is never read
   --> src\ocr_engine.rs:131:28
    |
131 |         let mut resize_h = h;
    |                            ^
    |
    = help: maybe it is overwritten before being read?

For more information about this error, try `rustc --explain E0502`.
warning: `tauri-apphowlingual` (lib) generated 2 warnings
error: could not compile `tauri-apphowlingual` (lib) due to 1 previous error; 2 warnings emitted
